--- a/siiuttlax/templates/shared/menu_professor.html
+++ b/siiuttlax/templates/shared/menu_professor.html
@@ -6,6 +6,11 @@
     <div class="subnavigation__wrapper">
         <ul>
             <li>
+                <a href="{% url 'seguimiento' %}">
+                    Seguimiento Tutorial
+                </a>
+            </li>
+            <li>
                 <a href="justifying_student.html">
                     Justificantes Alumno
                 </a>
