--- a/siiuttlax/static/css/style.css
+++ b/siiuttlax/static/css/style.css
@@ -1,80 +1,22 @@
-/* Reset de márgenes y paddings */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* Estilos generales */
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    background-color: #f0f0f0;
+    height: 100vh;
+    background: rgb(240, 240, 240);
 }
 
-/* Estilos para la hoja de reporte */
-.hoja {
-    width: 21cm;
-    min-height: 29.7cm;
-    padding: 2cm;
-    background: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    position: relative;
+body::-webkit-scrollbar {
+    display: none;
 }
 
-header, footer {
-    width: 100%;
-    text-align: center;
-    background-color: white;
-    margin-bottom: 20px;
-}
-
-header img, footer img {
-    width: 100%;
-    max-width: 100%;
-}
-
-.encabezado {
-    margin: 20px 0; /* Espacio entre el contenido y el header/footer */
-}
-
-.encabezado h1 {
-    text-align: center;
-    font-size: 24px;
-    margin-bottom: 1cm;
-}
-
-.encabezado p {
-    margin: 10px 0 5px;
-    font-weight: bold;
-}
-
-.encabezado input, .encabezado textarea {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    box-sizing: border-box;
-    font-family: inherit;
-    font-size: 14px;
-}
-
-.encabezado input[type="date"] {
-    width: auto;
-}
-
-.encabezado button, .encabezado input[type="file"] {
-    display: block;
-    margin: 20px auto;
-    padding: 10px 20px;
-    font-size: 16px;
-}
-
-/* Estilos del navbar */
 nav {
     background: white;
     display: flex;
@@ -87,24 +29,24 @@ nav {
     z-index: 1000;
 }
 
-nav .logo {
+.logo {
     display: flex;
     align-items: center;
     margin-right: auto;
 }
 
-nav img {
+img {
     width: auto;
     height: 1.875rem;
 }
 
-nav h1 {
+h1 {
     font-size: 1.4375rem;
     font-weight: 500;
     margin-left: 1.25rem;
 }
 
-nav .navigation {
+.navigation {
     max-width: 40rem;
     width: auto;
     display: flex;
@@ -114,19 +56,16 @@ nav .navigation {
     align-items: center;
 }
 
-nav .navigation li {
+.navigation li {
     position: relative;
     transition: all 0.5s ease;
     flex-grow: 1;
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera, and Edge */
+    user-select: none;
     width: auto;
 }
 
-nav .navigation a {
-    font-family: 'Poppins', sans-serif;
+.navigation a {
+    font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-size: 1rem;
     display: flex;
@@ -141,17 +80,18 @@ nav .navigation a {
     transition: all 0.7s ease;
 }
 
-nav .navigation a:hover {
+.navigation a:hover {
     background-position: 0;
     color: #19bd66;
 }
 
-nav .navigation>li:hover>a {
+
+.navigation>li:hover>a {
     background-position: 0;
     color: #19bd66;
 }
 
-nav .subnavigation__wrapper {
+.subnavigation__wrapper {
     overflow: hidden;
     max-height: 0;
     position: absolute;
@@ -162,7 +102,7 @@ nav .subnavigation__wrapper {
     font-size: 1rem;
 }
 
-nav .navigation li:hover .subnavigation__wrapper {
+.navigation li:hover .subnavigation__wrapper {
     max-height: 50rem;
     top: 4rem;
     display: flex;
@@ -170,15 +110,15 @@ nav .navigation li:hover .subnavigation__wrapper {
     color: #19bd66;
 }
 
-nav .navigation ul {
-    padding: 0;
+.navigation ul {
+    padding: 0; 
 }
 
-nav .navigation li ul li a {
+.navigation li ul li a {
     padding: 0.5rem 1rem;
 }
 
-nav ul li:hover .js-arrow {
+ul li:hover .js-arrow {
     transform: rotate(180deg);
     transition: max-height all 0.5s ease;
 }
@@ -196,7 +136,7 @@ button {
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
     border-radius: 0.3125rem;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 button:hover {
@@ -219,55 +159,6 @@ table {
   
   th {
     background-color: #04AA6D;
-/* Estilos para el formulario de entrevista inicial */
-.interview-form {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.interview-form h2 {
-    margin-bottom: 20px;
-    color: #333;
-    font-size: 24px;
-    text-align: center;
-}
-
-.interview-form p {
-    font-size: 16px;
-    margin-bottom: 10px;
-    color: #555;
-}
-
-/* Asegura que todos los campos del formulario se alineen bien */
-.interview-form label {
-    display: block;
-    margin-bottom: 8px;
-    font-weight: bold;
-}
-
-.interview-form input,
-.interview-form select,
-.interview-form textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-bottom: 15px;
-    font-size: 16px;
-}
-
-.interview-form textarea {
-    resize: vertical;
-    height: 120px; /* Ajustar la altura del área de texto */
-}
-
-.interview-form .btn-submit {
-    background-color: #4CAF50;
     color: white;
   }
 
@@ -286,148 +177,4 @@ table {
     padding: 20px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-}
-}
-
-/* Encabezado del formulario */
-.update-profile-form h2 {
-    font-size: 24px;
-    color: #333;
-    margin-bottom: 20px;
-    text-align: center;
-}
-
-/* Sección de datos del perfil */
-.update-profile-form h3 {
-    font-size: 18px;
-    color: #555;
-    margin-bottom: 10px;
-    /*text-align: center;*/
-}
-
-/* Estilos para los campos del formulario */
-.update-profile-form input, 
-.update-profile-form select, 
-.update-profile-form textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    box-sizing: border-box;
-}
-.update-profile-form textarea{
-    height: 120px;
-    width: 562px;
-}
-
-/* Estilo del campo de edad */
-#ageField {
-    background-color: #e9ecef;
-    cursor: not-allowed;
-}
-
-/* Botón de Éxito */
-.update-profile-form button.success {
-    background-color: #28a745;
-    color: #fff;
-}
-
-.update-profile-form button.success:hover {
-    background-color: #218838;
-}
-
-.form-spacing-perfil {
-    height: 600px;
-}
-
-/* Estilos perfil estudiante */
-/* Contenedor principal del dashboard */
-.dashboard-container {
-    display: flex;
-    gap: 20px; /* Espacio entre los contenedores */
-}
-
-/* Contenedor de información del perfil del estudiante */
-.profile-info {
-    flex: 1; /* Ocupa una parte del contenedor flex */
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-/* Datos del perfil de estudiante */
-.profile-info h2 {
-    font-size: 24px;
-    color: #333;
-    margin-bottom: 10px;
-}
-
-/* Sección de datos del perfil */
-.profile-info h3 {
-    font-size: 18px;
-    color: #555;
-    margin-bottom: 10px;
-}
-
-/* Información de perfil */
-.profile-info p {
-    font-size: 16px;
-    color: #666;
-    margin-bottom: 10px;
-}
-
-/* Contenedor de detalles del estudiante */
-.student-details {
-    flex: 3; /* Ocupa más espacio en comparación con profile-info */
-    padding: 20px;
-    border-radius: 10px;
-}
-
-/* Sección de datos del perfil */
-.student-details h3 {
-    font-size: 18px;
-    color: #555;
-    margin-bottom: 10px;
-}
-
-/* Información de perfil */
-.student-details p {
-    font-size: 16px;
-    color: #666;
-    margin-bottom: 10px;
-}
-
-/* Estilos para el contenedor del mensaje flotante */
-.floating-message {
-    position: fixed;
-    top: 50%;  /* Centrar verticalmente */
-    left: 50%;  /* Centrar horizontalmente */
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    border: 1px solid #ccc;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    z-index: 1000; /* Asegura que esté por encima de otros elementos */
-    max-width: 400px;
-    width: 100%;
-    text-align: center;
-}
-
-/* Estilos específicos para el botón de reactivación */
-.btn-reactivate {
-    background-color: #21bb18; /* Color de fondo del botón */
-    color: white; /* Color del texto */
-    padding: 0.5rem 1rem; /* Espaciado interno del botón */
-    border: none; /* Sin borde */
-    border-radius: 4px; /* Bordes redondeados */
-    font-size: 14px; /* Tamaño de la fuente */
-    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
-    transition: background-color 0.3s, color 0.3s; /* Transición suave para el cambio de color */
-}
-
-.btn-reactivate:hover {
-    background-color: #00e68a; /* Color de fondo en hover */
-    color: black; /* Color del texto en hover */
 }
